--- a/index.html
+++ b/index.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>모의 주식 시뮬레이터</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body { font-family: sans-serif; padding: 20px; }
-    #stockList button { margin: 2px; }
-    canvas { max-width: 100%; height: 300px; }
+    select, button, input { margin: 4px; }
+    #stockChart { max-width: 100%; height: 300px; }
+    textarea { width: 100%; height: 120px; margin-top: 10px; }
   </style>
 </head>
 <body>
-  <h1>📈 모의 주식 시뮬레이터</h1>
-  <div>현재 자산: <span id="cash"></span>원</div>
-  <div>총 평가금액: <span id="totalValue"></span>원 | 수익률: <span id="roi"></span>%</div>
+  <h1>📊 모의 주식 시뮬레이터</h1>
+  <div>💰 자산: <span id="cash"></span>원 | 총 평가금액: <span id="totalValue"></span>원 | 수익률: <span id="roi"></span>%</div>
 
-  <select id="stockSelect"></select>
   <div>
-    수량: <input type="number" id="amount" value="1" min="1" />
+    <label for="stockSelect">종목 선택:</label>
+    <select id="stockSelect"></select>
+    <input type="number" id="amount" value="1" min="1">
     <button onclick="buyStock()">매수</button>
     <button onclick="sellStock()">매도</button>
     <button onclick="shortStock()">숏</button>
-    <button onclick="coverShort()">숏 청산</button>
+    <button onclick="coverShort()">청산</button>
   </div>
 
   <div id="stockInfo"></div>
   <canvas id="stockChart"></canvas>
+
+  <h3>📘 거래 로그</h3>
+  <textarea id="logArea" readonly></textarea>
 
   <script>
     const stocks = [
@@ -43,119 +47,120 @@
       { name: 'LG에너지솔루션', price: 420000 },
       { name: '현대모비스', price: 210000 },
       { name: '롯데케미칼', price: 190000 },
-      { name: '저가테스트종목', price: 1000 } // 저가 종목
+      { name: '저가테스트종목', price: 1000 }
     ];
 
     let portfolio = JSON.parse(localStorage.getItem('portfolio')) || {};
     let cash = parseInt(localStorage.getItem('cash') || "100000");
-
-    const chartsData = {};
+    let logs = JSON.parse(localStorage.getItem('logs')) || [];
     let currentStock = stocks[0].name;
     let currentChart = null;
+    const chartsData = {};
 
     function saveData() {
       localStorage.setItem('portfolio', JSON.stringify(portfolio));
       localStorage.setItem('cash', cash);
+      localStorage.setItem('logs', JSON.stringify(logs));
     }
 
     function updateUI() {
       document.getElementById('cash').innerText = cash.toLocaleString();
-      const stockInfo = document.getElementById('stockInfo');
-      stockInfo.innerHTML = '';
-
       let total = cash;
-      stocks.forEach(stock => {
-        const p = portfolio[stock.name] || { quantity: 0, short: 0, logs: [] };
-        const value = p.quantity * stock.price;
-        const shortLoss = p.short * stock.price;
+      const info = stocks.map(s => {
+        const p = portfolio[s.name] || { quantity: 0, short: 0, logs: [] };
+        const value = p.quantity * s.price - p.short * s.price;
         total += value;
-        total -= shortLoss;
-
         const avg = p.logs.length ? p.logs[p.logs.length - 1].price : 0;
-        const gain = avg ? ((stock.price - avg) / avg * 100).toFixed(2) : '0.00';
-        const shortGain = avg ? ((avg - stock.price) / avg * 100).toFixed(2) : '0.00';
-
-        stockInfo.innerHTML += `
-          <div><strong>${stock.name}</strong> | 보유: ${p.quantity}주 | 숏: ${p.short}주 
-          | 수익률: ${gain}% | 숏 수익률: ${shortGain}%</div>`;
-      });
-
+        const gain = avg ? ((s.price - avg) / avg * 100).toFixed(2) : '0.00';
+        const shortGain = avg ? ((avg - s.price) / avg * 100).toFixed(2) : '0.00';
+        return `<div><b>${s.name}</b> | 보유: ${p.quantity}주 | 숏: ${p.short}주 | 수익률: ${gain}% | 숏 수익률: ${shortGain}%</div>`;
+      }).join('');
+      document.getElementById('stockInfo').innerHTML = info;
       const roi = (((total - 100000) / 100000) * 100).toFixed(2);
       document.getElementById('totalValue').innerText = total.toLocaleString();
       document.getElementById('roi').innerText = roi;
     }
 
+    function logAction(text) {
+      logs.push(`[${new Date().toLocaleTimeString()}] ${text}`);
+      document.getElementById('logArea').value = logs.slice(-50).join('\n');
+      saveData();
+    }
+
     function buyStock() {
-      const name = currentStock;
+      const stock = stocks.find(s => s.name === currentStock);
       const amount = parseInt(document.getElementById('amount').value);
-      const stock = stocks.find(s => s.name === name);
-      const totalCost = stock.price * amount;
-      if (cash >= totalCost) {
-        cash -= totalCost;
-        if (!portfolio[name]) portfolio[name] = { quantity: 0, short: 0, logs: [] };
-        portfolio[name].quantity += amount;
-        portfolio[name].logs.push({ action: "buy", price: stock.price, time: new Date().toLocaleString() });
-        saveData();
+      const total = stock.price * amount;
+      if (cash >= total) {
+        cash -= total;
+        if (!portfolio[currentStock]) portfolio[currentStock] = { quantity: 0, short: 0, logs: [] };
+        portfolio[currentStock].quantity += amount;
+        portfolio[currentStock].logs.push({ action: "buy", price: stock.price });
+        logAction(`${currentStock} ${amount}주 매수 @${stock.price}`);
         updateUI();
       }
     }
 
     function sellStock() {
-      const name = currentStock;
+      const stock = stocks.find(s => s.name === currentStock);
       const amount = parseInt(document.getElementById('amount').value);
-      const stock = stocks.find(s => s.name === name);
-      if (portfolio[name]?.quantity >= amount) {
-        portfolio[name].quantity -= amount;
+      const p = portfolio[currentStock];
+      if (p && p.quantity >= amount) {
         cash += stock.price * amount;
-        portfolio[name].logs.push({ action: "sell", price: stock.price, time: new Date().toLocaleString() });
-        saveData();
+        p.quantity -= amount;
+        p.logs.push({ action: "sell", price: stock.price });
+        logAction(`${currentStock} ${amount}주 매도 @${stock.price}`);
         updateUI();
       }
     }
 
     function shortStock() {
-      const name = currentStock;
+      const stock = stocks.find(s => s.name === currentStock);
       const amount = parseInt(document.getElementById('amount').value);
-      const stock = stocks.find(s => s.name === name);
-      if (!portfolio[name]) portfolio[name] = { quantity: 0, short: 0, logs: [] };
-      portfolio[name].short += amount;
+      if (!portfolio[currentStock]) portfolio[currentStock] = { quantity: 0, short: 0, logs: [] };
+      portfolio[currentStock].short += amount;
       cash += stock.price * amount;
-      portfolio[name].logs.push({ action: "short", price: stock.price, time: new Date().toLocaleString() });
-      saveData();
+      portfolio[currentStock].logs.push({ action: "short", price: stock.price });
+      logAction(`${currentStock} ${amount}주 숏진입 @${stock.price}`);
       updateUI();
     }
 
     function coverShort() {
-      const name = currentStock;
+      const stock = stocks.find(s => s.name === currentStock);
       const amount = parseInt(document.getElementById('amount').value);
-      const stock = stocks.find(s => s.name === name);
-      if (portfolio[name]?.short >= amount) {
-        const cost = stock.price * amount;
-        if (cash >= cost) {
-          portfolio[name].short -= amount;
-          cash -= cost;
-          portfolio[name].logs.push({ action: "cover", price: stock.price, time: new Date().toLocaleString() });
-          saveData();
-          updateUI();
-        }
+      const p = portfolio[currentStock];
+      const cost = stock.price * amount;
+      if (p && p.short >= amount && cash >= cost) {
+        p.short -= amount;
+        cash -= cost;
+        p.logs.push({ action: "cover", price: stock.price });
+        logAction(`${currentStock} ${amount}주 숏청산 @${stock.price}`);
+        updateUI();
       }
     }
 
-    function initCharts() {
-      stocks.forEach(stock => {
-        chartsData[stock.name] = { labels: [], data: [] };
+    function updatePrices() {
+      stocks.forEach(s => {
+        const change = (Math.random() - 0.45) * 0.1;
+        s.price = Math.max(1, Math.round(s.price * (1 + change)));
       });
     }
 
-    function updateAllCharts() {
+    function initCharts() {
+      stocks.forEach(s => {
+        chartsData[s.name] = { labels: [], data: [] };
+      });
+    }
+
+    function updateChartData() {
       const now = new Date().toLocaleTimeString();
-      stocks.forEach(stock => {
-        const data = chartsData[stock.name];
-        data.labels.push(now);
-        data.data.push(stock.price);
-        if (data.labels.length > 50) {
-          data.labels.shift();
-          data.data.shift();
+      stocks.forEach(s => {
+        const d = chartsData[s.name];
+        d.labels.push(now);
+        d.data.push(s.price);
+        if (d.labels.length > 50) {
+          d.labels.shift();
+          d.data.shift();
         }
       });
     }
@@ -172,64 +177,52 @@
             label: name,
             data: data.data,
             borderColor: 'green',
-            borderWidth: 2,
             fill: false
           }]
         },
-        options: {
-          animation: false,
-          scales: {
-            y: { beginAtZero: false }
-          }
-        }
+        options: { animation: false, scales: { y: { beginAtZero: false } } }
       });
     }
-
-    function updatePrices() {
-      stocks.forEach(stock => {
-        const change = (Math.random() - 0.45) * 0.1; // 약간 상승 쪽으로 기울인 랜덤
-        stock.price = Math.max(1, Math.round(stock.price * (1 + change)));
-      });
-    }
-
-    // 폭락 / 폭등 이벤트
-    setInterval(() => {
-      const stock = stocks[Math.floor(Math.random() * stocks.length)];
-      const drop = Math.random() * 0.3 + 0.7; // 70% ~ 100%
-      stock.price = Math.max(1, Math.floor(stock.price * (1 - drop)));
-    }, 100000);
-
-    setInterval(() => {
-      const stock = stocks[Math.floor(Math.random() * stocks.length)];
-      const rise = Math.random() * 0.2 + 1; // 100% ~ 120%
-      stock.price = Math.floor(stock.price * (1 + rise));
-    }, 150000);
-
-    // 주기적 업데이트
-    setInterval(() => {
-      updatePrices();
-      updateAllCharts();
-      renderChart(currentStock);
-      updateUI();
-    }, 5000);
 
     document.getElementById('stockSelect').addEventListener('change', (e) => {
       currentStock = e.target.value;
       renderChart(currentStock);
     });
 
+    setInterval(() => {
+      updatePrices();
+      updateChartData();
+      renderChart(currentStock);
+      updateUI();
+    }, 3000);
+
+    setInterval(() => {
+      const s = stocks[Math.floor(Math.random() * stocks.length)];
+      const drop = Math.random() * 0.3 + 0.7;
+      s.price = Math.max(1, Math.floor(s.price * (1 - drop)));
+      logAction(`${s.name} 폭락 (-${Math.floor(drop * 100)}%)`);
+    }, 100000);
+
+    setInterval(() => {
+      const s = stocks[Math.floor(Math.random() * stocks.length)];
+      const rise = Math.random() * 0.2 + 1;
+      s.price = Math.floor(s.price * (1 + rise));
+      logAction(`${s.name} 폭등 (+${Math.floor(rise * 100)}%)`);
+    }, 150000);
+
     function init() {
       const select = document.getElementById('stockSelect');
-      stocks.forEach(stock => {
+      stocks.forEach(s => {
         const option = document.createElement('option');
-        option.value = stock.name;
-        option.textContent = stock.name;
+        option.value = s.name;
+        option.textContent = s.name;
         select.appendChild(option);
       });
       initCharts();
-      updateAllCharts();
+      updateChartData();
       renderChart(currentStock);
       updateUI();
+      document.getElementById('logArea').value = logs.slice(-50).join('\n');
     }
 
     init();
