--- a/index.html
+++ b/index.html
@@ -2,20 +2,82 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>모의 주식 시뮬레이터</title>
+  <title>📈 모의 주식 시뮬레이터</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    body { font-family: sans-serif; padding: 20px; }
-    select, button, input { margin: 4px; }
-    #stockChart { max-width: 100%; height: 300px; }
-    textarea { width: 100%; height: 120px; margin-top: 10px; }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: #f4f7f9;
+      padding: 20px;
+      margin: 0;
+    }
+    h1 {
+      text-align: center;
+      color: #333;
+    }
+    #notification {
+      position: fixed;
+      top: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #4caf50;
+      color: white;
+      padding: 12px 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      display: none;
+      z-index: 1000;
+    }
+    .panel {
+      background: white;
+      border-radius: 12px;
+      padding: 20px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      margin-bottom: 20px;
+    }
+    select, button, input {
+      margin: 6px;
+      padding: 8px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+    }
+    button {
+      background-color: #2c7be5;
+      color: white;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #1a5fd1;
+    }
+    #stockChart {
+      max-width: 100%;
+      height: 300px;
+    }
+    textarea {
+      width: 100%;
+      height: 120px;
+      margin-top: 10px;
+      border-radius: 8px;
+      padding: 8px;
+    }
+    .summary {
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
   </style>
 </head>
 <body>
-  <h1>📊 모의 주식 시뮬레이터</h1>
-  <div>💰 자산: <span id="cash"></span>원 | 총 평가금액: <span id="totalValue"></span>원 | 수익률: <span id="roi"></span>%</div>
+  <div id="notification"></div>
 
-  <div>
+  <h1>📊 모의 주식 시뮬레이터</h1>
+
+  <div class="panel summary">
+    💰 자산: <span id="cash"></span>원 |
+    총 평가금액: <span id="totalValue"></span>원 |
+    수익률: <span id="roi"></span>%
+  </div>
+
+  <div class="panel">
     <label for="stockSelect">종목 선택:</label>
     <select id="stockSelect"></select>
     <input type="number" id="amount" value="1" min="1">
@@ -25,11 +87,16 @@
     <button onclick="coverShort()">청산</button>
   </div>
 
-  <div id="stockInfo"></div>
-  <canvas id="stockChart"></canvas>
+  <div class="panel" id="stockInfo"></div>
 
-  <h3>📘 거래 로그</h3>
-  <textarea id="logArea" readonly></textarea>
+  <div class="panel">
+    <canvas id="stockChart"></canvas>
+  </div>
+
+  <div class="panel">
+    <h3>📘 거래 로그</h3>
+    <textarea id="logArea" readonly></textarea>
+  </div>
 
   <script>
     const stocks = [
@@ -56,6 +123,14 @@
     let currentStock = stocks[0].name;
     let currentChart = null;
     const chartsData = {};
+
+    function showNotification(msg, color = '#4caf50') {
+      const box = document.getElementById('notification');
+      box.style.background = color;
+      box.innerText = msg;
+      box.style.display = 'block';
+      setTimeout(() => box.style.display = 'none', 3000);
+    }
 
     function saveData() {
       localStorage.setItem('portfolio', JSON.stringify(portfolio));
@@ -97,7 +172,10 @@
         portfolio[currentStock].quantity += amount;
         portfolio[currentStock].logs.push({ action: "buy", price: stock.price });
         logAction(`${currentStock} ${amount}주 매수 @${stock.price}`);
+        showNotification(`${currentStock} ${amount}주 매수 완료`, '#2196f3');
         updateUI();
+      } else {
+        showNotification('💸 잔액이 부족합니다.', '#f44336');
       }
     }
 
@@ -110,7 +188,10 @@
         p.quantity -= amount;
         p.logs.push({ action: "sell", price: stock.price });
         logAction(`${currentStock} ${amount}주 매도 @${stock.price}`);
+        showNotification(`${currentStock} ${amount}주 매도 완료`, '#2196f3');
         updateUI();
+      } else {
+        showNotification('❌ 보유 주식이 부족합니다.', '#f44336');
       }
     }
 
@@ -122,6 +203,7 @@
       cash += stock.price * amount;
       portfolio[currentStock].logs.push({ action: "short", price: stock.price });
       logAction(`${currentStock} ${amount}주 숏진입 @${stock.price}`);
+      showNotification(`${currentStock} ${amount}주 숏진입`, '#ff9800');
       updateUI();
     }
 
@@ -135,7 +217,10 @@
         cash -= cost;
         p.logs.push({ action: "cover", price: stock.price });
         logAction(`${currentStock} ${amount}주 숏청산 @${stock.price}`);
+        showNotification(`${currentStock} ${amount}주 숏청산 완료`, '#4caf50');
         updateUI();
+      } else {
+        showNotification('🚫 숏 포지션이 부족하거나 자금 부족.', '#f44336');
       }
     }
 
@@ -201,6 +286,7 @@
       const drop = Math.random() * 0.3 + 0.7;
       s.price = Math.max(1, Math.floor(s.price * (1 - drop)));
       logAction(`${s.name} 폭락 (-${Math.floor(drop * 100)}%)`);
+      showNotification(`${s.name} 주가 폭락! 📉`, '#e53935');
     }, 100000);
 
     setInterval(() => {
@@ -208,6 +294,7 @@
       const rise = Math.random() * 0.2 + 1;
       s.price = Math.floor(s.price * (1 + rise));
       logAction(`${s.name} 폭등 (+${Math.floor(rise * 100)}%)`);
+      showNotification(`${s.name} 주가 폭등! 🚀`, '#43a047');
     }, 150000);
 
     function init() {
